# taichu

./: CONSTITUTION.md  Cargo.toml  README.md  STATUS.md  deploy.sh  install.sh
BIO-BRIAN-V1/: bio-brian-v1.md  checkpoint_gen_1000.json  checkpoint_gen_1500.json  checkpoint_gen_2000.json  checkpoint_gen_500.json
CodeBuddy/20260310101858/: ROUND14_VERIFICATION_REPORT.md  analyze_final.py  compare_results.py  train_consensus_predictor.py  train_model.py
ai-legion/: ORGANIZATION.md
axi-github-push/: .gitignore  CONSTITUTION.md  LICENSE  README.md  ROADMAP.md
axi-github-push/akashic/: Cargo.toml
axi-github-push/akashic/src/: capsule.rs  lib.rs
axi-github-push/core/: Cargo.toml
axi-github-push/core/src/: lib.rs  types.rs
contracts/: AXIPool.sol
docs/: ECONOMIC_DESIGN_v2.md
docs/civilization_battle/: 10_civilization_questions.md  BENCHMARK_SCORE_REPORT.md  deepseek32_code_001.txt  deepseek32_code_002.txt  deepseek32_code_003.txt  deepseek32_logic_001.txt  deepseek32_logic_002.txt  deepseek32_logic_003.txt  deepseek32_math_001.txt  deepseek32_math_002.txt  deepseek32_math_003.txt  deepseek32_synthesis_001.txt  gptoss120b_code_001.txt  gptoss120b_code_002.txt  gptoss120b_code_003.txt  gptoss120b_logic_001.txt  gptoss120b_logic_002.txt  gptoss120b_logic_003.txt  gptoss120b_math_001.txt  gptoss120b_math_002.txt  (+28 more)
governance/: PHASE_B_LAUNCH_PLAN.md
persona_system_v2/: GATE3_STATUS.md  P0_EXECUTION_CHECKLIST.md  README.md  __init__.py  bridge_adaptor.py  experiment_3x3.py  pipeline_implementation.py  test_distinguishability.py  test_gate1.py  test_incrementality.py
promo/: COMMUNITY_OUTREACH.md  DEMO_SCRIPT.md  MANIFESTO.md  MOLTBOOK_STRATEGY.md  REDDIT_POSTS.md  TWITTER_THREADS.md
src/: lib.rs  main.rs
(+70 files in other folders)
