[package]
name = "axi-akashic"
version = "1.0.0"
edition = "2021"
authors = ["Atlas-AIOS Team"]
description = "Akashic Knowledge Market - Knowledge capsule economy"
license = "GPL-3.0"
repository = "https://github.com/Atlas-AIOS/axi"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
axi-core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
