[package]
name = "axi-core"
version = "1.0.0"
edition = "2021"
authors = ["Atlas-AIOS Team"]
description = "AXI Protocol Core - Physical-anchored resource currency"
license = "GPL-3.0"
repository = "https://github.com/Atlas-AIOS/axi"

[features]
default = ["std"]
std = []
cuda = ["cust"]
telemetry = ["metrics"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
rand = "0.8"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Optional CUDA support
cust = { version = "0.3", optional = true }

# Optional telemetry
metrics = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
